<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/etLocation"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/location"/>

    <EditText
        android:id="@+id/etDate"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/date"/>

    <EditText
        android:id="@+id/etPayRange"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/pay_range"/>

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>
