<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="16dp">
        
        <FrameLayout
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal">

        <!--profile pic-->
        <ImageView
            android:id="@+id/imgProfile"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_launcher_background"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="@android:color/transparent"
            android:text="@string/add_photo"
            android:textColor="#FFF" />

        </FrameLayout>

        <EditText
            android:id="@+id/etFirstName"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/first_name"/>

        <EditText
            android:id="@+id/etLastName"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/last_name"/>

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="Username" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="Password"
            android:inputType="textPassword"
            android:layout_below="@id/etUsername"
            android:layout_marginTop="16dp" />

        <Spinner
            android:id="@+id/spinnerCountry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"/>

        <Switch
            android:id="@+id/switchAge"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/are_you_18"
            android:layout_marginTop="16dp"/>

        <Button
            android:id="@+id/btnCreateAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Create Account"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Already have an account? Login"
            android:layout_marginTop="16dp"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>
</ScrollView>
